fix id on the page

--- a/src/main/resources/templates/planet.html
+++ b/src/main/resources/templates/planet.html
@@ -91,7 +91,7 @@
         <h2>Create Planet</h2>
         <form id="planet-form" action="/createPlanet" method="post">
             <div class="mb-3">
-                <label for="newPlanetId" class="form-label">Name:</label>
+                <label for="newPlanetId" class="form-label">Id:</label>
                 <input type="text" id="newPlanetId" class="form-control" name="id" placeholder="Enter planet id">
             </div>
             <div class="mb-3">
