--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,6 +14,7 @@
     <div class="d-flex justify-content-center gap-3">
         <a href="/findAllClients" class="btn btn-primary">Client Manager</a>
         <a href="/findAllPlanets" class="btn btn-secondary">Planet Manager</a>
+        <a href="/findAllTickets" class="btn btn-secondary">Ticket Manager</a>
     </div>
 </div>
 </body>
