change button colour

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,8 +13,8 @@
     <p>Select an option to manage:</p>
     <div class="d-flex justify-content-center gap-3">
         <a href="/findAllClients" class="btn btn-primary">Client Manager</a>
-        <a href="/findAllPlanets" class="btn btn-secondary">Planet Manager</a>
-        <a href="/findAllTickets" class="btn btn-secondary">Ticket Manager</a>
+        <a href="/findAllPlanets" class="btn btn-primary">Planet Manager</a>
+        <a href="/findAllTickets" class="btn btn-primary">Ticket Manager</a>
     </div>
 </div>
 </body>
